--- a/app/assets/style/theme.scss
+++ b/app/assets/style/theme.scss
@@ -1,12 +1,24 @@
 @import "colors.scss";
 
-.text{
+.text {
     color: $defaultText;
+    font-size: 19;
+    margin-bottom: 2rem;
 }
 
-.background{
+.background {
     flex: 1;
     align-items: center;
-    justify-content: center; 
-    background-color: $backgroundColor
+    justify-content: center;
+    background-color: $backgroundColor;
+}
+
+.selectionView {
+    flex-direction: row;
+    align-items: center;
+}
+
+.separatorLine {
+    width: 4%;
+    align-items: center;
 }
