--- a/app/assets/style/theme.scss
+++ b/app/assets/style/theme.scss
@@ -10,3 +10,40 @@
     justify-content: center; 
     background-color: $backgroundColor
 }
+
+.flatlistContainer {
+    flex: 1;
+    padding-top: 40;
+    padding-top: 40;
+    justify-content: center; 
+    background-color: $backgroundColor
+}
+
+.flatlistItem  {
+    flex: 1;
+    margin-right: 20;
+    margin-left: 20;
+    margin-top: 24;
+    padding: 30px;
+    background-color:rgba($color: #ffffff, $alpha: 0.2);
+    border-radius: 25px;
+}
+
+.flatListTitle {
+    font-size: 24;
+    font-weight: 700;
+    color: #ffffff;
+}
+
+.flatListDescription {
+    padding-top: 20;
+    font-size: 14;
+    color: #ffffff;
+}
+
+.doubleRightImage {
+    height: 25;
+    width: 25;
+    justify-content: center; 
+
+}
