--- a/app/assets/style/colors.scss
+++ b/app/assets/style/colors.scss
@@ -1,3 +1,4 @@
-$backgroundColor: #36393E;
+$backgroundColor: #36393e;
+$backgroundColorDark: #2c2d30;
 
-$defaultText: #FFFFFF;
+$defaultText: #ffffff;
