--- a/app/assets/style/theme.scss
+++ b/app/assets/style/theme.scss
@@ -108,3 +108,42 @@
 	margin-bottom: 1rem;
 	font-weight: 500;
 }
+
+// Achievements view
+.achievementsBackground {
+	flex: 1;
+	align-items: center;
+	padding-top: 15%;
+	background-color: $backgroundColor;
+}
+
+.achievementsTitle {
+	font-size: 18;
+	font-weight: 600;
+	color: $defaultText;
+}
+
+.achievementsText {
+	font-size: 17;
+	font-weight: 600;
+	color: grey;
+}
+
+.statsView {
+	justify-content: center;
+	align-items: center;
+	background-color: $backgroundColorDark;
+	width: 80%;
+	height: 20%;
+	border-radius: 25px;
+	margin-bottom: 20px;
+}
+
+.challengesView {
+	margin-top: 7px;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 80%;
+	background-color: green;
+}
