--- a/app/assets/style/theme.scss
+++ b/app/assets/style/theme.scss
@@ -141,9 +141,31 @@
 
 .challengesView {
 	margin-top: 7px;
-	justify-content: center;
-	align-items: center;
 	width: 100%;
 	height: 80%;
-	background-color: green;
+	margin-left: 4%;
+}
+
+.challengeItem {
+	width: 96%;
+	height: 70px;
+	border-width: 3px;
+	border-color: $backgroundColorDark;
+	border-radius: 5px;
+	justify-content: center;
+	margin-bottom: 4px;
+}
+
+.challengeContent {
+	flex-direction: row;
+	align-items: center;
+}
+
+.challengeIcon {
+	width: 50px;
+	height: 50px;
+	background-color: gold;
+	border-radius: 40px;
+	margin-right: 4%;
+	margin-left: 2%;
 }
