--- a/app/assets/style/theme.scss
+++ b/app/assets/style/theme.scss
@@ -82,7 +82,7 @@
 	justify-content: center;
 }
 .image {
-	flex: 4;
+	flex: 5;
 	justify-content: center;
 	align-items: center;
 }
@@ -97,6 +97,13 @@
 
 .cardTitle {
 	font-size: 25;
+	color: white;
+	font-weight: 700;
+	text-align: center;
+}
+
+.miniCardTitle {
+	font-size: 18;
 	color: white;
 	font-weight: 700;
 	text-align: center;
