--- a/app/assets/style/theme.scss
+++ b/app/assets/style/theme.scss
@@ -12,6 +12,22 @@
 }
 
 /* SoloHome */
+.bigButtonsBackground {
+	flex: 1;
+	padding-top: 5%;
+	align-items: center;
+	justify-content: center;
+	background-color: $backgroundColor;
+}
+
+.timer {
+	text-align: center;
+	flex: 1;
+	font-size: 38;
+	font-weight: 700;
+	color: #a3a9b4;
+	justify-content: flex-end;
+}
 
 .flatlistContainer {
 	flex: 1;
@@ -32,9 +48,9 @@
 }
 
 .flatListTitle {
-    font-size: 24;
-    font-weight: 700;
-    color: rgba($color: #ffffff, $alpha: 0.8)
+	font-size: 24;
+	font-weight: 700;
+	color: rgba($color: #ffffff, $alpha: 0.8);
 }
 
 .flatListDescription {
@@ -45,38 +61,37 @@
 
 /* Guide */
 .guideTitle {
-    color: rgba($color: #E67E22, $alpha: 1.0);
-    font-size: 32;
-    font-weight: 700;
-    margin-top: 60;
-    padding-bottom: 40;
-    padding-left: 10;
-    padding-right: 10;
+	color: rgba($color: #e67e22, $alpha: 1);
+	font-size: 32;
+	font-weight: 700;
+	margin-top: 60;
+	padding-bottom: 40;
+	padding-left: 10;
+	padding-right: 10;
 }
 
 .guideContent {
-    color: #ffffff;
-    font-size: 16;
-    padding-bottom: 40;
-    padding-left: 20;
-    padding-right: 20;
-} 
+	color: #ffffff;
+	font-size: 16;
+	padding-bottom: 40;
+	padding-left: 20;
+	padding-right: 20;
+}
 
 .guideButton {
-    width: 80%;
-    margin-left: 30;
-    margin-right: 10;
-    padding: 10px;
-    background-color:rgba($color: #F1C40F, $alpha: 0.8) ;
-    justify-content: center; 
-    align-items: center; 
-    border-radius: 25px;
+	width: 80%;
+	margin-left: 30;
+	margin-right: 10;
+	padding: 10px;
+	background-color: rgba($color: #f1c40f, $alpha: 0.8);
+	justify-content: center;
+	align-items: center;
+	border-radius: 25px;
 }
 
 .guideButtonText {
-    color: #ffffff;
-    font-weight: 700;
-
+	color: #ffffff;
+	font-weight: 700;
 }
 
 .doubleRightImage {
@@ -109,11 +124,16 @@
 	font-weight: 700;
 	text-align: center;
 }
+
 .description {
-	font-size: 16;
+	font-size: 14;
 	color: #a3a9b4;
 	font-style: italic;
+	text-align: center;
+	margin-left: 5px;
+	margin-right: 5px;
 }
+
 .titleSection {
 	flex: 3;
 	margin-top: 30;
@@ -127,6 +147,7 @@
 }
 
 .instructions {
+	text-align: center;
 	flex: 1;
 	font-size: 16;
 	font-weight: 500;
@@ -214,4 +235,16 @@
 	border-radius: 40px;
 	margin-right: 4%;
 	margin-left: 2%;
+}
+
+.endActionText {
+	font-size: 17;
+	font-weight: 600;
+	color: grey;
+}
+.endActionScore {
+	font-size: 38;
+	font-weight: 700;
+	color: #a3a9b4;
+	margin-bottom: 15%;
 }
