--- a/app/assets/style/theme.scss
+++ b/app/assets/style/theme.scss
@@ -51,6 +51,7 @@
     margin-top: 60;
     padding-bottom: 40;
     padding-left: 10;
+    margin-left: 10;
     padding-right: 10;
 }
 
@@ -66,6 +67,7 @@
     width: 80%;
     margin-left: 30;
     margin-right: 10;
+    margin-bottom: 10;
     padding: 10px;
     background-color:rgba($color: #F1C40F, $alpha: 0.8) ;
     justify-content: center; 
